# CppOOPPRojects

EmployeeProject/: Addresses.cpp  Addresses.h  CMakeLists.txt  CommissionEmployee.cpp  CommissionEmployee.h  Employee.cpp  Employee.h  HourlyEmployee.cpp  HourlyEmployee.h  Manager.cpp  Manager.h  SalariedEmployee.cpp  SalariedEmployee.h  main.cpp
TechnologyStore/: BaseProduct.cpp  BaseProduct.h  Brands.cpp  Brands.h  CMakeLists.txt  NoteBookProduct.cpp  NoteBookProduct.h  PhoneProduct.cpp  PhoneProduct.h  Store.cpp  Store.h  main.cpp
